tests/baselines/reference/contextualSignatureInstantiation3.errors.txt
tests/cases/compiler/contextualSignatureInstantiation3.ts(18,14): error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'U[]'.
  Type 'number' is not assignable to type 'U'.
tests/cases/compiler/contextualSignatureInstantiation3.ts(21,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v2' must be of type 'number[][]', but here has type 'T[][]'.
tests/cases/compiler/contextualSignatureInstantiation3.ts(22,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'v2' must be of type 'number[][]', but here has type 'T[][]'.


==== tests/cases/compiler/contextualSignatureInstantiation3.ts (3 errors) ====
    function map<T, U>(items: T[], f: (x: T) => U): U[]{
        return items.map(f);
    }
    
    function identity<T>(x: T) {
        return x;
    }
    
    function singleton<T>(x: T) {
        return [x];
    }
    
    var xs = [1, 2, 3];
    
    // Have compiler check that we get the correct types
    var v1: number[];
    var v1 = xs.map(identity);      // Error if not number[]
    var v1 = map(xs, identity);     // Error if not number[]
                 ~~
!!! error TS2345: Argument of type 'number[]' is not assignable to parameter of type 'U[]'.
!!! error TS2345:   Type 'number' is not assignable to type 'U'.
    
    var v2: number[][];         
    var v2 = xs.map(singleton);     // Error if not number[][]
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v2' must be of type 'number[][]', but here has type 'T[][]'.
    var v2 = map(xs, singleton);    // Error if not number[][]
        ~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'v2' must be of type 'number[][]', but here has type 'T[][]'.
    